--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor-community/keep-awake": "^7.1.0",
+    "@capacitor-community/screen-brightness": "^7.0.0",
+    "@capacitor/cli": "^7.4.4",
+    "@capacitor/core": "^7.4.4",
+    "@capacitor/device": "^7.0.2",
+    "@capacitor/ios": "^7.4.4",
+    "@capacitor/screen-orientation": "^7.0.2",
     "@reduxjs/toolkit": "^2.10.1",
     "@yudiel/react-qr-scanner": "^2.4.1",
     "react": "^19.2.0",
