--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@capacitor/screen-orientation": "^7.0.2",
     "@reduxjs/toolkit": "^2.10.1",
     "@yudiel/react-qr-scanner": "^2.4.1",
+    "primereact": "^10.9.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.66.1",
+    "react-hot-toast": "^2.6.0",
+    "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
     "styled-components": "^6.1.19"
@@ -30,6 +34,7 @@
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^5.1.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^5.2.0",
