--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
+
+
 <dict>
 <key>UIStatusBarHidden</key>
 <true/>
 <key>UIViewControllerBasedStatusBarAppearance</key>
 <false/>
+
+
+
+<key>NSCameraUsageDescription</key>
+<string>This app requires camera access to take photos.</string>
+
+<key>NSPhotoLibraryUsageDescription</key>
+<string>This app needs access to your photo library.</string>
+
+<key>NSPhotoLibraryAddUsageDescription</key>
+<string>This app needs permission to save photos to your library.</string>
 
 
 <key>UISupportedInterfaceOrientations~ipad</key>
@@ -59,5 +72,6 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	
 </dict>
 </plist>
